the_project/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-nodeport
  labels:
    app: todo-app
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
